--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ag-grid-react": "^23.2.0",
     "axios": "^0.19.2",
     "chartist": "^0.11.4",
+    "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-chartist": "^0.14.3",
