--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-react": "^23.2.0",
     "axios": "^0.19.2",
     "chartist": "^0.11.4",
+    "crypto-js": "^4.0.0",
     "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
