--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "chartist": "^0.11.4",
     "crypto-js": "^4.0.0",
+    "lodash": "^4.17.20",
     "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
